What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

March 4, 2011
! [antonin] updated autotools files to improve build and install procedures (credit to Vincent Torri).

February 17, 2011
* [antonin] replaced 'long' by 'size_t' in dwt.c to be sure to cast to a pointer size.
* [antonin] now allows 16-bit precision for mj2 encoding and decoding (solves Issue 49 and Issue 63). Credit to Winfried.

February 9, 2011
! [antonin] renamed "java sources" to "java-sources" to avoid blank space
- [antonin] removed opj_config.h.in from svn, as it is automaticaly generated by autoheader when calling ./bootstrap.sh

February 6, 2011
* [antonin] cmake : fixed installed links to openjpeg.h and openjpeg3d.h.

January 30, 2011
* [antonin] fixed warnings in jp2.c (signed compared to unsigned) and dwt.c (bad cast)
- [antonin] removed depcomp file from trunk (automatically copied by automake in main folder)

January 29, 2011
* [antonin] removed 'é' in license header to prevent warning C4819 (see Issue 57).

January 24, 2011
- [antonin] remove more obsolete VS files. Left only mj2_to_metadata VS files, as this is the only executable not yet handled by CMake.

January 23, 2011
- [antonin] removed obsolete VS files
! [antonin] MJ2 module: 
			- Add two components to mj2.h: meth, enumcs.
			- Define or reset all components of mj2_cparameters_t before its usage.
			- Add argument '-D prec' to frames_to_mj2.c and use the precision in mj2_convert.c (solves Issue 49).
* [antonin] move 'KK' definition from rs.h to rs.c to prevent duplicate symbol error when building jpwl with autotools.

January 18, 2011
! [rdieter] cmake: SOVERSION change to 1 (from 1.4) to match auto-tools

January 17, 2011
- [rdieter] remove generated files (Issue 52)

January 16, 2011
* [antonin] convert.c: inclusion of endian.h has to be different on APPLE platforms

January 13, 2011
+ [rdieter] add pkg-config support to cmake
! [rdieter] adjust autotools pkg-config support to match